--- a/app/app.css
+++ b/app/app.css
@@ -36,6 +36,10 @@
     #display {
         color: var(--light);
     }
+    .container form .output #display::placeholder,
+    .container form .output #display::-webkit-input-placeholder {
+        color: var(--light);
+    }
 }
 
 @media (prefers-color-scheme: light) {
@@ -58,6 +62,11 @@
     #display {
         color: var(--dark);
     }
+
+    .container form .output #display::placeholder,
+    .container form .output #display::-webkit-input-placeholder {
+        color: var(--dark);
+    }
 }
 
 .container {
@@ -70,7 +79,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 50%;
+    width: 100%;
     height: 100%;
     display: flex;
     align-items: flex-end;
@@ -130,6 +139,7 @@ form .output {
 }
 
 form .output .menu {
+    width: 15%; /* to remove displasement of display while clicking on menu icon on devices with viewport size > 768px */
     padding: 1rem;
     z-index: 2;
 }
@@ -149,7 +159,7 @@ form .output .menu {
     cursor: pointer;
 }
 
-.output .menu #menuBar.open{
+.output .menu #menuBar.open {
     width: 60px;
     -webkit-transition: 0s;
     -moz-transition: 0s;
@@ -308,4 +318,11 @@ form .input input {
 
 form .input .equal {
     background: var(--secondary);
+}
+
+
+@media (min-width: 768px) {
+    #sideBar {
+        width: 50%;
+    }
 }
